# LRAUTOMATIC

./: .gitignore  README.md  abrir_app.bat  config.example.json  desinstalar_automacao_windows.bat  executar_agente_homepicz.bat  executar_servidor_api.bat  iniciar_servidor.bat  instalar.bat  instalar_automacao_windows.bat  instalar_servidor.bat  pyproject.toml
apps_script/: HomePiczWebApp.gs
examples/: import-job.json
lightroom_plugin/LRAutomatic.lrplugin/: BuildSmartPreviews.ps1  CollectionOrganizer.lua  DebugLog.lua  Info.lua  Init.lua  JobRunner.lua  JobRunner45.lua  JobRunner46.lua  JobRunner48.lua  JobRunner49.lua  JobRunner50.lua  JobRunner51.lua  JobRunner52.lua  JobRunner53.lua  JobRunner54.lua  JobRunner55.lua  JobRunner56.lua  JobRunner57.lua  JobRunner58.lua  Json.lua  PluginInfoProvider.lua  ProcessNow.lua  RescueTest.lua  SafeRunner.lua  Shutdown.lua  TestPlugin.lua
src/lrautomatic/: __init__.py  api.py  automation_control.py  catalogs.py  cli.py  config.py  desktop.py  desktop_enhanced.py  desktop_raw_calendar.py  desktop_raw_created.py  desktop_selective_cleanup.py  desktop_stable.py  diagnostics.py  homepicz_editor_features.py  homepicz_queue_policy.py  homepicz_runtime_responsiveness.py  homepicz_scheduler.py  homepicz_scheduler_guard.py  models.py  operational_inventory.py  photo_inventory.py  raw_creation_time.py  resilient_scanner.py  session_agent.py  session_agent_responsive.py  session_agent_stable.py  store.py  windows_service.py
