[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lrautomatic"
version = "0.1.0"
description = "CLI, local API and Lightroom Classic plugin bridge"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic>=2.8,<3",
  "typer>=0.12,<1",
  "httpx>=0.27,<1"
]

[project.scripts]
lrautomatic = "lrautomatic.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
