[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lrautomatic"
version = "0.4.0"
description = "CLI, desktop app, local API and Lightroom Classic automation pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic>=2.8,<3",
  "typer>=0.12,<1",
  "httpx>=0.27,<1"
]

[project.scripts]
lrautomatic = "lrautomatic.cli:app"
lrautomatic-desktop = "lrautomatic.desktop:main"

[tool.setuptools.packages.find]
where = ["src"]
